syntax = "proto3";
option java_package = "ru.adk.protobuf.entity";
option java_outer_classname = "ProtobufValueMessage";
import "google/protobuf/any.proto";
package ru.adk.protobuf.entity;

message ProtobufValue {
    google.protobuf.Any value = 1;
    Type valueType = 2;

    enum Type {
        NULL = 0;
        VALUE = 1;
        ENTITY = 2;
        COLLECTION = 3;
        STRING_PARAMETERS_MAP = 4;
        STRING = 5;
        LONG = 6;
        DOUBLE = 7;
        INT = 8;
        BOOL = 9;
        BYTE = 10;
        BYTE_STRING = 11;
        MAP = 12;
        FLOAT = 13;
    }
}

message ProtobufEntity {
    map<string, ProtobufValue> values = 1;
}

message ProtobufCollection {
    ProtobufValue.Type elementsType = 1;
    repeated ProtobufValue values = 2;
}

message ProtobufStringParametersMap {
    map<string, string> parameters = 1;
}

